istio-keycloak/keycloak/keycloak-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtual-service
spec:
  hosts:
    - "keycloak.172.19.0.6.nip.io"
  gateways:
    - keycloak-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "keycloak.172.19.0.6.nip.io"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: keycloak-tls-secret
      hosts:
        - "keycloak.172.19.0.6.nip.io"
